src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_2.snap
---
source: src/parser/test.rs
description: "{1:}"
expression: result
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '}'."), (0,2)->(0,3)),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 4,
            },
        },
    },
]

===================================

{1:}
  ^ [Error] SyntaxError: Unexpected '}'.
